; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/char/extr_sclp_vt220.c_sclp_vt220_space_left.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/char/extr_sclp_vt220.c_sclp_vt220_space_left.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sclp_vt220_request = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64 }
%struct.sclp_vt220_sccb = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@PAGE_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sclp_vt220_request*)* @sclp_vt220_space_left to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sclp_vt220_space_left(%struct.sclp_vt220_request* %0) #0 {
  %2 = alloca %struct.sclp_vt220_request*, align 8
  %3 = alloca %struct.sclp_vt220_sccb*, align 8
  store %struct.sclp_vt220_request* %0, %struct.sclp_vt220_request** %2, align 8
  %4 = load %struct.sclp_vt220_request*, %struct.sclp_vt220_request** %2, align 8
  %5 = getelementptr inbounds %struct.sclp_vt220_request, %struct.sclp_vt220_request* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = inttoptr i64 %7 to %struct.sclp_vt220_sccb*
  store %struct.sclp_vt220_sccb* %8, %struct.sclp_vt220_sccb** %3, align 8
  %9 = load i32, i32* @PAGE_SIZE, align 4
  %10 = sext i32 %9 to i64
  %11 = sub i64 %10, 8
  %12 = load %struct.sclp_vt220_sccb*, %struct.sclp_vt220_sccb** %3, align 8
  %13 = getelementptr inbounds %struct.sclp_vt220_sccb, %struct.sclp_vt220_sccb* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = sext i32 %15 to i64
  %17 = sub i64 %11, %16
  %18 = trunc i64 %17 to i32
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
